--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/housing.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/nglthanhphuoc/PortfolioProjects-Data-Cleaning-Portfolio-Project-Queries.sql/blob/main/PortfolioProject_NashvilleHousing_.sql" class="button large">View Project</a></li>
+									<li><a href="https://github.com/nglthanhphuoc/Covid-Exploration-by-SQL">View Project</a></li>
 								</ul>
 							</article>
 
